Time: 1 ms (82.52%), Space: 42 MB (79.3%) - LeetHub